implemented required functionality

--- a/tech-test/src/app/app.component.html
+++ b/tech-test/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1 class="title-text">Welcome to Origin's Angular Technical Test: {{title}}</h1>
-
+<main class="main">
+  <section class="main__section">
+    <app-task-form></app-task-form>
+  </section>
+  <section class="main__section">
+    <app-task-list></app-task-list>
+  </section>
+</main>
